cabal-version:       >=1.2
name:                kpkgs
version:             0.1.0.0
build-type:          Simple


library
  build-depends:       base
                     , chainweb-api
                     , kadena-signing-api
                     , pact

  if !impl(ghcjs)
     build-depends:    chainweb
